--- a/abc.html
+++ b/abc.html
@@ -4,5 +4,6 @@
 <p>Welcome to github repository</p>
 <span>hello</span>
 <span>addition to test pull request</span>
+<span>addition to test merge request</span>
 </body>
 </html>
